Refactor personality statistics

--- a/ellsberg_daa_personality_statistics.ipynb
+++ b/ellsberg_daa_personality_statistics.ipynb
@@ -9,6 +9,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "from kmeans import KMeans\n",
+    "from kmeans_printer import print_per_game_kmeans\n",
+    "from pca import print_pca\n",
+    "\n",
+    "from data_common import EMOTIONS_FEATURES, PERSONALITY_FEATURES, DAA, SEX\n",
+    "\n",
     "df = pd.read_csv('data/data_ellsberg.csv')"
    ]
   },
@@ -20,16 +26,13 @@
    "source": [
     "df['Sex'] = np.where(df['Sex'] == 'Male', 0, 1)\n",
     "\n",
-    "csv_columns = ['ID', 'participant_id']\n",
-    "table_columns = ['Sex','Openness','Conscientiousness','Extroversion','Agreeability','Stability','Locus']\n",
-    "daa_columns = ['DAA']\n",
-    "df = df[csv_columns + table_columns + daa_columns]\n",
+    "df = df[PERSONALITY_FEATURES + EMOTIONS_FEATURES + [DAA, SEX]]\n",
     "\n",
-    "not_daa_df = df.loc[df['DAA'] == 0].drop(columns=daa_columns)\n",
-    "not_daa_df = not_daa_df[table_columns]\n",
+    "not_daa_df = df.loc[df[DAA] == 0]\n",
+    "not_daa_df = not_daa_df[PERSONALITY_FEATURES + EMOTIONS_FEATURES + [SEX]]\n",
     "\n",
-    "daa_df = df.loc[df['DAA'] == 1].drop(columns=daa_columns)\n",
-    "daa_df = daa_df[table_columns]"
+    "daa_df = df.loc[df[DAA] == 1]\n",
+    "daa_df = daa_df[PERSONALITY_FEATURES + EMOTIONS_FEATURES + [SEX]]"
    ]
   },
   {
@@ -38,9 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_df = df[table_columns]\n",
-    "all_mean = all_df.mean(axis=0)\n",
-    "all_std = all_df.std(axis=0)\n",
+    "all_mean = df.mean(axis=0)\n",
+    "all_std = df.std(axis=0)\n",
     "\n",
     "not_daa_mean = not_daa_df.mean(axis=0)\n",
     "not_daa_std = not_daa_df.std(axis=0)\n",
@@ -92,6 +94,36 @@
    "outputs": [],
    "source": [
     "to_summary(daa_mean, daa_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(daa_mean - not_daa_mean) / daa_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(not_daa_mean - daa_mean) / not_daa_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person_df = df[PERSONALITY_FEATURES + [DAA]]\n",
+    "person_km = KMeans(person_df, 1, labels=PERSONALITY_FEATURES, random_state=69)\n",
+    "print(person_km.df.head())\n",
+    "print_pca(person_df, person_km)"
    ]
   }
  ],
