--- a/ellsberg_kmeans_personality_and_emotion.ipynb
+++ b/ellsberg_kmeans_personality_and_emotion.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "PERSONALITY_CLUSTER = 'PersonalityCluster'\n",
     "\n",
-    "km = KMeans(df[PERSONALITY_FEATURES], K)\n",
+    "km = KMeans(df, K, labels=PERSONALITY_FEATURES)\n",
     "df[PERSONALITY_CLUSTER] = km.labels\n",
     "print(df[PERSONALITY_CLUSTER].value_counts())"
    ]
