--- a/ellsberg_kmeans_emotion_only.ipynb
+++ b/ellsberg_kmeans_emotion_only.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sils = [KMeans(df[EMOTIONS_FEATURES], k, random_state=random_state).silhouette for k in K_range]\n",
+    "sils = [KMeans(df, k, labels=EMOTIONS_FEATURES, random_state=random_state).silhouette for k in K_range]\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
     "plt.ylabel('silhouette')\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "km = KMeans(df[EMOTIONS_FEATURES], K, random_state=random_state)\n",
+    "km = KMeans(df, K, labels=EMOTIONS_FEATURES, random_state=random_state)\n",
     "\n",
     "#print('Silhouette:', km.silhouette, '\\n')\n",
     "\n",
