--- a/ellsberg_emotion_decision_tree.ipynb
+++ b/ellsberg_emotion_decision_tree.ipynb
@@ -256,7 +256,7 @@
     "               f'samples = {len}\\\\n' + \\\n",
     "               f'su = {su:.5f}\\\\n' + \\\n",
     "               f'cluster   0   1\\n' + \\\n",
-    "               f'non-daa {node.ct.df_counts.loc[0].tolist()}\\n' + \\\n",
+    "               f'not-daa {node.ct.df_counts.loc[0].tolist()}\\n' + \\\n",
     "               f'daa       {node.ct.df_counts.loc[1].tolist()}'\n",
     "\n",
     "    def __node_content(self, node):\n",
