Add NMF visualisation

--- a/ellsberg_daa_personality_statistics.ipynb
+++ b/ellsberg_daa_personality_statistics.ipynb
@@ -10,8 +10,7 @@
     "import pandas as pd\n",
     "\n",
     "from kmeans import KMeans\n",
-    "from kmeans_printer import print_per_game_kmeans\n",
-    "from pca import print_pca\n",
+    "from pca import print_pca, print_nmf\n",
     "\n",
     "from data_common import EMOTIONS_FEATURES, PERSONALITY_FEATURES, DAA, SEX\n",
     "\n",
@@ -121,9 +120,53 @@
    "outputs": [],
    "source": [
     "person_df = df[PERSONALITY_FEATURES + [DAA]]\n",
-    "person_km = KMeans(person_df, 1, labels=PERSONALITY_FEATURES, random_state=69)\n",
-    "print(person_km.df.head())\n",
+    "person_km = KMeans(person_df, 1, labels=PERSONALITY_FEATURES, random_state=69)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print_pca(person_df, person_km)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_nmf(person_df, person_km)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotions_df = df[EMOTIONS_FEATURES + [DAA]]\n",
+    "emotions_km = KMeans(emotions_df, 1, labels=EMOTIONS_FEATURES, random_state=69)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_pca(emotions_df, emotions_km)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_nmf(emotions_df, emotions_km)"
    ]
   }
  ],
