Refactor K-Means and PCA

--- a/ellsberg_kmeans_emotion_only.ipynb
+++ b/ellsberg_kmeans_emotion_only.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "random_state = 69\n",
     "K_range = range(2, 11)\n",
-    "K = 6"
+    "K = 2"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sils = [KMeans(df, k, labels=EMOTIONS_FEATURES, random_state=random_state).silhouette for k in K_range]\n",
+    "sils = [KMeans(df, k, features=EMOTIONS_FEATURES, random_state=random_state).silhouette for k in K_range]\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
     "plt.ylabel('silhouette')\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "km = KMeans(df, K, labels=EMOTIONS_FEATURES, random_state=random_state)\n",
+    "km = KMeans(df, K, features=EMOTIONS_FEATURES, random_state=random_state)\n",
     "\n",
     "#print('Silhouette:', km.silhouette, '\\n')\n",
     "\n",
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_pca(df, km)"
+    "print_pca(df, features=km.features, labels=km.labels)"
    ]
   },
   {
