--- a/ellsberg_kmeans_personality_and_emotion.ipynb
+++ b/ellsberg_kmeans_personality_and_emotion.ipynb
@@ -34,14 +34,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "random_state = 18\n",
     "K_range = range(2, 11)\n",
-    "sils = [KMeans(df[PERSONALITY_FEATURES], k).silhouette for k in K_range]\n",
+    "sils = [KMeans(df, k, features=PERSONALITY_FEATURES, random_state=random_state).silhouette for k in K_range]\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
     "plt.ylabel('silhouettes')\n",
-    "plt.show()\n",
-    "\n",
-    "# Typically, mean silhouette over 0.6 is considered a \"good\" clustering solution"
+    "plt.show()"
    ]
   },
   {
@@ -75,7 +74,7 @@
    "source": [
     "PERSONALITY_CLUSTER = 'PersonalityCluster'\n",
     "\n",
-    "km = KMeans(df, K, labels=PERSONALITY_FEATURES)\n",
+    "km = KMeans(df, K, features=PERSONALITY_FEATURES)\n",
     "df[PERSONALITY_CLUSTER] = km.labels\n",
     "print(df[PERSONALITY_CLUSTER].value_counts())"
    ]
@@ -86,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_pca(df, km)"
+    "print_pca(df, features=km.features, labels=km.labels)"
    ]
   },
   {
@@ -105,19 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(df[PERSONALITY_FEATURES], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Use same global properties for KMeans search\n",
-    "random_state = 18\n",
-    "K_range = range(2, 11)\n",
-    "K = 2"
+    "K_range = range(2, 11)"
    ]
   },
   {
@@ -133,8 +121,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df0 = df[df[PERSONALITY_CLUSTER] == 0].drop(PERSONALITY_CLUSTER, axis=1)\n",
-    "sils = [KMeans(df0[EMOTIONS_FEATURES], k, random_state=random_state).silhouette for k in K_range]\n",
+    "df0 = df[df[PERSONALITY_CLUSTER] == 0].copy()\n",
+    "sils = [KMeans(df0, k, features=EMOTIONS_FEATURES, random_state=random_state).silhouette for k in K_range]\n",
+    "print(sils)\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
     "plt.ylabel('silhouette')\n",
@@ -147,8 +136,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "km = KMeans(df0, K, random_state=random_state)\n",
+    "km = KMeans(df0, K, features=EMOTIONS_FEATURES, random_state=random_state)\n",
     "print_per_game_kmeans(km, EMOTIONS_LABELS, plot_graph=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0[CLUSTER] = km.labels\n",
+    "print(SUT(df0))"
    ]
   },
   {
@@ -164,8 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = df[df[PERSONALITY_CLUSTER] == 1].drop(PERSONALITY_CLUSTER, axis=1)\n",
-    "sils = [KMeans(df1[EMOTIONS_FEATURES], k).silhouette for k in K_range]\n",
+    "df1 = df[df[PERSONALITY_CLUSTER] == 1].copy()\n",
+    "sils = [KMeans(df1, k, features=EMOTIONS_FEATURES, random_state=18).silhouette for k in K_range]\n",
+    "print(sils)\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
     "plt.ylabel('silhouette')\n",
@@ -178,8 +178,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "km = KMeans(df1, K, random_state=random_state)\n",
+    "km = KMeans(df1, K, features=EMOTIONS_FEATURES, random_state=random_state)\n",
     "print_per_game_kmeans(km, EMOTIONS_LABELS, plot_graph=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1[CLUSTER] = km.labels\n",
+    "print(SUT(df1))"
    ]
   }
  ],
