Tweek and plot edt

--- a/ellsberg_emotion_decision_tree.ipynb
+++ b/ellsberg_emotion_decision_tree.ipynb
@@ -30,21 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_state = 18\n",
+    "random_state = 69\n",
     "K = 2\n",
     "\n",
-    "km = KMeans(df[EMOTIONS_FEATURES], K, random_state=random_state)\n",
+    "km = KMeans(df, K, features=EMOTIONS_FEATURES, random_state=random_state)\n",
     "print_per_game_kmeans(km, EMOTIONS_LABELS, plot_graph=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[CLUSTER] = km.labels\n",
-    "df = df.drop(EMOTIONS_FEATURES, axis=1)"
    ]
   },
   {
@@ -63,7 +53,7 @@
     "\n",
     "        self.__id = DecisionNode.ID\n",
     "        DecisionNode.ID += 1\n",
-    "        self.__ct = SUT(df, index, columns)\n",
+    "        self.__sut = SUT(df, index, columns)\n",
     "\n",
     "        self.__min_samples_leaf = min_samples_leaf\n",
     "        self.__min_samples_split = 3 * self.__min_samples_leaf\n",
@@ -82,12 +72,19 @@
     "        return self.__id\n",
     "\n",
     "    @property\n",
-    "    def ct(self):\n",
-    "        return self.__ct\n",
+    "    def sut(self):\n",
+    "        return self.__sut\n",
     "\n",
     "    @property\n",
     "    def is_leaf(self):\n",
     "        return self.__left == None and self.__right == None\n",
+    "\n",
+    "    @property\n",
+    "    def leaf_nodes(self):\n",
+    "        if self.is_leaf:\n",
+    "            return [self.id]\n",
+    "        else:\n",
+    "            return self.left.leaf_nodes + self.right.leaf_nodes\n",
     "\n",
     "    @property\n",
     "    def param(self):\n",
@@ -107,7 +104,7 @@
     "\n",
     "    @property\n",
     "    def metric(self):\n",
-    "        return self.__ct.metric\n",
+    "        return self.__sut.metric\n",
     "\n",
     "    @property\n",
     "    def subtree_metric(self):\n",
@@ -116,9 +113,16 @@
     "        else:\n",
     "            return self.left.metric + self.right.metric\n",
     "\n",
+    "    def label(self, df, column):\n",
+    "        df.loc[self.sut.df.index, column] = self.__id\n",
+    "        if self.left:\n",
+    "            self.left.label(df, column)\n",
+    "        if self.right:\n",
+    "            self.right.label(df, column)\n",
+    "\n",
     "    def __find_cutoff(self, param, cutoff):\n",
-    "        left_df = self.__ct.df[self.__ct.df[param] <= cutoff]\n",
-    "        right_df = self.__ct.df[self.__ct.df[param] > cutoff]\n",
+    "        left_df = self.__sut.df[self.__sut.df[param] <= cutoff]\n",
+    "        right_df = self.__sut.df[self.__sut.df[param] > cutoff]\n",
     "        return left_df, right_df\n",
     "        \n",
     "    def __find_cutoff_gain(self, current, param, cutoff):\n",
@@ -131,16 +135,16 @@
     "            self.__log.info(f'\\t\\t\\tNot enough samples in leaf: {left_len}, {right_len}')\n",
     "            return 0\n",
     "\n",
-    "        left_ct = SUT(left_df, self.__ct.index, self.__ct.columns)\n",
-    "        self.__log.debug('\\t\\t\\t' + '\\n\\t\\t\\t'.join(left_ct.df_p.to_string().split('\\n')))\n",
+    "        left_sut = SUT(left_df, self.__sut.index, self.__sut.columns)\n",
+    "        self.__log.debug('\\t\\t\\t' + '\\n\\t\\t\\t'.join(left_sut.df_p.to_string().split('\\n')))\n",
     "\n",
-    "        left_metric = left_ct.metric\n",
+    "        left_metric = left_sut.metric\n",
     "        self.__log.info(f'\\t\\t\\tL: {left_metric}')\n",
     "\n",
-    "        right_ct = SUT(right_df, self.__ct.index, self.__ct.columns)\n",
-    "        self.__log.debug('\\t\\t\\t' + '\\n\\t\\t\\t'.join(right_ct.df_p.to_string().split('\\n')))\n",
+    "        right_sut = SUT(right_df, self.__sut.index, self.__sut.columns)\n",
+    "        self.__log.debug('\\t\\t\\t' + '\\n\\t\\t\\t'.join(right_sut.df_p.to_string().split('\\n')))\n",
     "\n",
-    "        right_metric = right_ct.metric\n",
+    "        right_metric = right_sut.metric\n",
     "        self.__log.info(f'\\t\\t\\tR: {right_metric}')\n",
     "\n",
     "        return max(left_metric - current, right_metric - current)\n",
@@ -148,7 +152,7 @@
     "    def __find_best_cutoff_index(self, current, param):\n",
     "        best_cutoff = best_gain = None\n",
     "\n",
-    "        values = sorted(self.__ct.df[param].unique())\n",
+    "        values = sorted(self.__sut.df[param].unique())\n",
     "        cutoffs = [(values[i] + values[i+1]) / 2 for i in range(len(values) - 1)]\n",
     "        self.__log.info(f'\\t{values}')\n",
     "        np.random.shuffle(cutoffs)\n",
@@ -180,10 +184,10 @@
     "        return best_param, best_cutoff, best_gain \n",
     "\n",
     "    def __fit(self):\n",
-    "        current = self.__ct.metric\n",
+    "        current = self.__sut.metric\n",
     "        self.__log.warning(f'Node #{self.__id} [{current}]')\n",
     "\n",
-    "        if self.ct.len < self.__min_samples_split:\n",
+    "        if self.sut.len < self.__min_samples_split:\n",
     "            self.__log.warning(f'\\tNot splitting node, not enough samples')\n",
     "            return\n",
     "\n",
@@ -195,19 +199,19 @@
     "        left_df, right_df = self.__find_cutoff(self.__param, self.__cutoff)\n",
     "\n",
     "        self.__log.warning(f'\\tBest gain: {self.__gain}\\n')\n",
-    "        self.__log.warning('\\tLeft:\\t' + '\\n\\t'.join(str(SUT(left_df, self.__ct.index, self.__ct.columns)).split('\\n')))\n",
-    "        self.__log.warning('\\tRight:\\t' + '\\n\\t'.join(str(SUT(right_df, self.__ct.index, self.__ct.columns)).split('\\n')))\n",
+    "        self.__log.warning('\\tLeft:\\t' + '\\n\\t'.join(str(SUT(left_df, self.__sut.index, self.__sut.columns)).split('\\n')))\n",
+    "        self.__log.warning('\\tRight:\\t' + '\\n\\t'.join(str(SUT(right_df, self.__sut.index, self.__sut.columns)).split('\\n')))\n",
     "\n",
     "        self.__left = DecisionNode(left_df,\n",
     "                                   min_gain=self.__min_gain,\n",
     "                                   min_samples_leaf=self.__min_samples_leaf,\n",
-    "                                   index=self.__ct.index,\n",
-    "                                   columns=self.__ct.columns)\n",
+    "                                   index=self.__sut.index,\n",
+    "                                   columns=self.__sut.columns)\n",
     "        self.__right = DecisionNode(right_df,\n",
     "                                    min_gain=self.__min_gain,\n",
     "                                    min_samples_leaf=self.__min_samples_leaf,\n",
-    "                                    index=self.__ct.index,\n",
-    "                                    columns=self.__ct.columns)\n",
+    "                                    index=self.__sut.index,\n",
+    "                                    columns=self.__sut.columns)\n",
     "\n",
     "class DecisionTree:\n",
     "    def __init__(self, df, min_gain, min_samples_leaf):\n",
@@ -219,11 +223,69 @@
     "    def root(self):\n",
     "        return self.__root\n",
     "\n",
-    "logger = logging.getLogger('dt')\n",
-    "logger.setLevel('WARNING')\n",
+    "    def label(self, df, column):\n",
+    "        self.root.label(df, column)\n",
+    "        df[column] = df[column].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[CLUSTER] = km.labels\n",
+    "dt_df = df.drop(EMOTIONS_FEATURES, axis=1)\n",
     "\n",
+    "logging.getLogger('dt').setLevel('WARNING')\n",
     "np.random.default_rng(seed=1337)\n",
-    "dt = DecisionTree(df, min_gain=0.025, min_samples_leaf=20)"
+    "\n",
+    "DecisionNode.ID = 0\n",
+    "dt = DecisionTree(dt_df, min_gain=0.080, min_samples_leaf=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node = 'Node'\n",
+    "dt.label(df, node)\n",
+    "print(dt.root.leaf_nodes)\n",
+    "print(df[node].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "from pca import print_decomposition\n",
+    "\n",
+    "lim = (-4,4)\n",
+    "decomp = PCA(n_components=2, svd_solver='full').fit_transform(df[EMOTIONS_FEATURES])\n",
+    "print_decomposition(decomp, df, labels=df[node], xlim=lim, ylim=lim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pca_edt import print_df_pca\n",
+    "\n",
+    "decomp_df = df.copy()\n",
+    "decomp_df['PCAx'] = decomp[:, 0]\n",
+    "decomp_df['PCAy'] = decomp[:, 1]\n",
+    "\n",
+    "for n in dt.root.leaf_nodes:\n",
+    "    title = f'--- Node #{n} ---'\n",
+    "    node_df = decomp_df[decomp_df[node] == n]\n",
+    "    print_df_pca(node_df, title, col_x='PCAx', col_y='PCAy', col_lbl=CLUSTER, xlim=lim, ylim=lim)"
    ]
   },
   {
@@ -250,14 +312,14 @@
     "        return '\\n'.join([child_node, child_edge])\n",
     "\n",
     "    def __node_label(self, node):\n",
-    "        len = node.ct.len\n",
-    "        su = node.ct.metric\n",
+    "        len = node.sut.len\n",
+    "        su = node.sut.metric\n",
     "        return f'id = {node.id}\\\\n' + \\\n",
     "               f'samples = {len}\\\\n' + \\\n",
     "               f'su = {su:.5f}\\\\n' + \\\n",
     "               f'cluster   0   1\\n' + \\\n",
-    "               f'not-daa {node.ct.df_counts.loc[0].tolist()}\\n' + \\\n",
-    "               f'daa       {node.ct.df_counts.loc[1].tolist()}'\n",
+    "               f'not-daa {node.sut.df_counts.loc[0].tolist()}\\n' + \\\n",
+    "               f'daa       {node.sut.df_counts.loc[1].tolist()}'\n",
     "\n",
     "    def __node_content(self, node):\n",
     "        if node.is_leaf:\n",
