Cleanup statistics and adjust to KMeans and PCA changes

--- a/ellsberg_daa_personality_statistics.ipynb
+++ b/ellsberg_daa_personality_statistics.ipynb
@@ -62,10 +62,13 @@
     "    summary.index = ['notDAA', 'DAA']\n",
     "    return summary\n",
     "\n",
-    "def to_summary(mean, std):\n",
-    "    values = zip(mean.index, mean, std)\n",
-    "    for i, m, s in values:\n",
-    "        print(f'{i}: {m:.3f}({s:.3f})')\n"
+    "def to_summary(all_mean, all_std, not_daa_mean, not_daa_std, daa_mean, daa_std):\n",
+    "    diff = ((daa_mean - not_daa_mean) / daa_mean) * 100\n",
+    "    values = zip(all_mean.index, all_mean, all_std, not_daa_mean, not_daa_std, daa_mean, daa_std, diff)\n",
+    "    for i, alm, als, ndm, nds, dm, ds, df in values:\n",
+    "        print(f'{i:20} {alm:6.3f}({als:5.3f})\\t\\t{ndm:6.3f}({nds:5.3f})\\t\\t{dm:6.3f}({ds:5.3f})\\t\\t{df:6.2f}%')\n",
+    "\n",
+    "to_summary(all_mean, all_std, not_daa_mean, not_daa_std, daa_mean, daa_std)"
    ]
   },
   {
@@ -74,7 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_summary(all_mean, all_std)"
+    "person_km = KMeans(df, 1, features=PERSONALITY_FEATURES, random_state=69)\n",
+    "print_pca(df, person_km.features, person_km.labels)\n",
+    "print_nmf(df, person_km.features, person_km.labels)"
    ]
   },
   {
@@ -83,90 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_summary(not_daa_mean, not_daa_std)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_summary(daa_mean, daa_std)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(daa_mean - not_daa_mean) / daa_mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(not_daa_mean - daa_mean) / not_daa_mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "person_df = df[PERSONALITY_FEATURES + [DAA]]\n",
-    "person_km = KMeans(person_df, 1, labels=PERSONALITY_FEATURES, random_state=69)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_pca(person_df, person_km)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_nmf(person_df, person_km)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emotions_df = df[EMOTIONS_FEATURES + [DAA]]\n",
-    "emotions_km = KMeans(emotions_df, 1, labels=EMOTIONS_FEATURES, random_state=69)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_pca(emotions_df, emotions_km)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_nmf(emotions_df, emotions_km)"
+    "emotions_km = KMeans(df, 1, features=EMOTIONS_FEATURES, random_state=69)\n",
+    "print_pca(df, emotions_km.features, emotions_km.labels)\n",
+    "print_nmf(df, emotions_km.features, emotions_km.labels)"
    ]
   }
  ],
