--- a/ellsberg_daa_personality_statistics.ipynb
+++ b/ellsberg_daa_personality_statistics.ipynb
@@ -92,6 +92,40 @@
     "print_pca(df, emotions_km.features, emotions_km.labels)\n",
     "print_nmf(df, emotions_km.features, emotions_km.labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from statistics import mean\n",
+    "\n",
+    "features = EMOTIONS_FEATURES\n",
+    "X = df[features]\n",
+    "y = df[DAA]\n",
+    "\n",
+    "scores = []\n",
+    "coefs = np.ndarray(shape=(0,X.shape[1]), dtype=float)\n",
+    "for _ in range(100):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=None, test_size=0.2)\n",
+    "    model = LogisticRegression(solver='liblinear').fit(X_train, y_train)\n",
+    "    pred = model.predict(X_test)\n",
+    "    score = model.score(X_test, y_test)\n",
+    "    scores.append(score)\n",
+    "    coefs = np.vstack([coefs, model.coef_])\n",
+    "\n",
+    "    #print(\"test\", y_test.to_list())\n",
+    "    #print(\"pred\", pred.tolist())\n",
+    "    #print(\"score\", score)\n",
+    "    #print(\"coef\", model.coef_)\n",
+    "\n",
+    "print(mean(scores))\n",
+    "for f, c in zip(features, coefs.mean(axis=0)):\n",
+    "    print(f'{f:20} = {c:10.3f}')"
+   ]
   }
  ],
  "metadata": {
