Plot personality K-Means without locus

--- a/ellsberg_kmeans_emotion_only.ipynb
+++ b/ellsberg_kmeans_emotion_only.ipynb
@@ -43,6 +43,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "sils = np.ndarray(shape=(0,len(K_range)), dtype=float)\n",
+    "for i in range(100):\n",
+    "    sils = np.vstack([sils, [KMeans(df, k, features=EMOTIONS_FEATURES, random_state=None).silhouette for k in K_range]])\n",
+    "sils = sils.mean(axis=0)\n",
+    "plt.plot(K_range, sils, 'bx-')\n",
+    "plt.xlabel('k')\n",
+    "plt.ylabel('average silhouette')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sils = [KMeans(df, k, features=EMOTIONS_FEATURES, random_state=random_state).silhouette for k in K_range]\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
