--- a/ellsberg_kmeans_personality_and_emotion.ipynb
+++ b/ellsberg_kmeans_personality_and_emotion.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "from symmetric_uncertainty import SUT\n",
     "\n",
-    "from data_common import PERSONALITY_FEATURES, EMOTIONS_FEATURES, EMOTIONS_LABELS, DAA, CLUSTER\n",
+    "from data_common import PERSONALITY_FEATURES, PERSONALITY_FEATURES_NO_LOCUS, EMOTIONS_FEATURES, EMOTIONS_LABELS, DAA, CLUSTER\n",
     "\n",
     "df = pd.read_csv('data/data_ellsberg.csv')\n",
     "df = df[PERSONALITY_FEATURES + EMOTIONS_FEATURES + [DAA]]"
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Use optimal K (= 2)"
+    "#### Use optimal K (= 2) and plot personality cluster centroids"
    ]
   },
   {
@@ -56,7 +56,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = 2"
+    "K = 2\n",
+    "km = KMeans(df, K, features=PERSONALITY_FEATURES)\n",
+    "print(PERSONALITY_FEATURES)\n",
+    "print_per_game_kmeans(km, [PERSONALITY_FEATURES_NO_LOCUS], ylim=None, plot_graph=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# K = 2\n",
+    "# km = KMeans(df, K, features=PERSONALITY_FEATURES)\n",
+    "# len = len(PERSONALITY_FEATURES_NO_LOCUS)\n",
+    "# plt.plot(PERSONALITY_FEATURES_NO_LOCUS, km.centroids[0][:len], label=f'Cluster #0')\n",
+    "# plt.plot(PERSONALITY_FEATURES_NO_LOCUS, km.centroids[1][:len], label=f'Cluster #1')\n",
+    "# plt.show()"
    ]
   },
   {
@@ -73,8 +90,6 @@
    "outputs": [],
    "source": [
     "PERSONALITY_CLUSTER = 'PersonalityCluster'\n",
-    "\n",
-    "km = KMeans(df, K, features=PERSONALITY_FEATURES)\n",
     "df[PERSONALITY_CLUSTER] = km.labels\n",
     "print(df[PERSONALITY_CLUSTER].value_counts())"
    ]
@@ -112,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Emotion-based clusters within personality cluster #1"
+    "#### Emotion-based clusters within personality cluster #0"
    ]
   },
   {
@@ -154,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Emotion-based clusters within personality cluster #2"
+    "#### Emotion-based clusters within personality cluster #1"
    ]
   },
   {
@@ -164,7 +179,7 @@
    "outputs": [],
    "source": [
     "df1 = df[df[PERSONALITY_CLUSTER] == 1].copy()\n",
-    "sils = [KMeans(df1, k, features=EMOTIONS_FEATURES, random_state=18).silhouette for k in K_range]\n",
+    "sils = [KMeans(df1, k, features=EMOTIONS_FEATURES, random_state=random_state).silhouette for k in K_range]\n",
     "print(sils)\n",
     "plt.plot(K_range, sils, 'bx-')\n",
     "plt.xlabel('k')\n",
